Archive2/11/cf3759f9225309/output
main.cpp:3:1: error: template specialization requires 'template<>'
struct foo<int> { using type = int; };
^
template<> 
main.cpp:4:1: error: template specialization requires 'template<>'
struct foo<double> { using type = double; };
^
template<> 
main.cpp:11:5: error: no matching function for call to 'bar'
    bar(0);
    ^~~
main.cpp:7:6: note: candidate template ignored: couldn't infer template argument 'T'
void bar(typename foo<T>::type);
     ^
3 errors generated.
